# ai-detector-model

./: 404.html  Makefile  README.md  api.py  index.html  pyproject.toml
ai_detector_model/: __init__.py  api.py  baseline_model_class.py  dataset.py  features.py  model_handler.py  plots.py
ai_detector_model/modeling/: predict.py  train.py
app/: image_preprocessor.py
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/experiments/: Metryki klasyfikacji binarnej.md
experiments/Metryki klasyfikacji binarnej/: index.html
getting-started/: index.html
libs/scripts/baseline_model/: baseline_model.ipynb
notebooks/: baseline_model.ipynb
search/: search_index.json
test/: test_image_preprocessor.py
tests/: test_api.py
